--- a/src/app/codigqr/codigqr.page.html
+++ b/src/app/codigqr/codigqr.page.html
@@ -1,4 +1,4 @@
-<ion-content color="warning" class="ion-padding">
+<ion-content  class="ion-padding">
   <h1 class="titulo-personalizado">Codigo QR</h1>
   <ion-button expand="block" shape="round" size="small" [routerLink]="['/principal']">Volver</ion-button>
 
