--- a/src/app/alumnoregistro/alumnoregistro.page.html
+++ b/src/app/alumnoregistro/alumnoregistro.page.html
@@ -7,6 +7,10 @@
   
   
     <ion-card-content> 
+      <ion-button (click)="captureImage()">
+        Click Picture
+     </ion-button>
+     <img [src]="clickedImage" />
       <ion-button expand="block" shape="round"  size="small" [routerLink]="['/camaraalumno']">Abrir Camara</ion-button>
     </ion-card-content>
 
